src/test/deca/context/invalid/ContextAvecObjet/Visibility/protectedDotDot2.deca
// Description:
//    appel  d'un champs protégé
//
// Resultats:
// Erreur contextuelle ligne 14
// appel impossible de x : champs protégé
class A{
	protected float x;
}
class B extends A{
	 protected A a;
	 void setProtected(float z){
	 	this.a.x=z;
	 }
}
